/iTrade/ChangeLog
===============================================================================

On the road for v0.4.8 (Druuna)

===============================================================================

2008-03-01  Gilles Dumortier <dgil at ieee dot org>
	* some markets have long name - adjust combobox width

2008-03-01  Michel Legrand <m_leg at users dot sourceforge dot net>
	* New Markets :
	  NSE	NSE OF INDIA
	  NZE	NEW ZEALAND EXCHANGE
	  BUE	BUENOS AIRES EXCHANGE
	  OSL	OSLO EXCHANGE
	  STO 	STOCKHOLM EXCHANGE
	  CSE	COPENHAGEN EXCHANGE
	  SHE	SHENZHEN EXCHANGE
	  BSE	BOMBAY EXCHANGE

2008-02-23 Mirco Martinelli <mirco dot martinelli at fastwebnet dot it>
	* Italian translation ! (merged by dgil)

2008-01-06  Gilles Dumortier <dgil at ieee dot org>
	* Currency View : exception at exit (SF bug 1863036)
	* Currency View : bad N/A (SF bug 1862976)
	* Implement Currency Conversion (itrade_wxconvert.py) (SF bug 1498677)

2008-01-05  Gilles Dumortier <dgil at ieee dot org>
	* Quote View : Refresh after Importing Historic Data (SF bug 1589101)

2008-01-03  Gilles Dumortier <dgil at ieee dot org>
	* Thanks to michel help, able to fix two issues with Yahoo connector
	  (SF bug 1848473) : percent was badly computed, percent / prevclose
	  were not correctly used in the matrix
	* Fix Amex tickers with "." or "-" : suffix for Yahoo (SF bug 1726101)
	* Fix Toronto exchange tickers with 2 "-" for Yahoo (SF bug 1723060)
	* New instable tarball + update website

===============================================================================

2008-01-03  Gilles Dumortier <dgil at ieee dot org>
	* Prepare 0.4.6 official release
		SVN tag : ITRADE_0_4_6_NAUSICAA2_TAG
		SVN branch : ITRADE_0_4_6_NAUSICAA2_BRANCH

2008-01-03  Gilles Dumortier <dgil at ieee dot org>
	* View Quote : Graph : Refresh Broken (SF bug 1665668) : Fix a lot of
	  issues on the refresh mechanism when launching the window, changing
	  the page or changing the quote.
